<resources>
    <string name="app_name">CNC Mobile </string>
    <string name="link1">
        <a href="https://www.youtube.com/watch?v=jF4F8Zr2YO8">Modern High Speed CNC Lathe Machine Working, CNC Milling Machine Metal</a>
    </string>
    <string name="link2">
        <a href="https://www.youtube.com/watch?v=8o_lSq4rkwY">Mesin Bubut CNC Keren dan Canggih - Amazing Machine</a>
    </string>


    <string name="materi_1">Materi 1</string>
    <string name="materi_2">Materi 2</string>
    <string name="materi">Materi</string>
    <string name="materi_4">Materi 4</string>
    <string name="mengidentifikasi_dan_menggunakan_mesin_bubut_cnc_tu_2a">Mengidentifikasi dan Menggunakan Mesin Bubut CNC TU-2A</string>
    <string name="mengidentifikasi_dan_menggunakan_parameter_pemotongan_mesin_bubut_tu_2a">Menggunakan Parameter Pemotongan Mesin Bubut TU-2A</string>
    <string name="menerapkan_dan_menggunakan_teknik_pemrograman_mesin_bubut_tu_2a">Menerapkan dan Menggunakan Teknik Pemrograman Mesin Bubut TU-2A</string>
    <string name="menerapkan_dan_menggunakan_teknik_pemesinan_bubut_tu_2a">Menerapkan dan Menggunakan Teknik Pemesinan Bubut TU-2A</string>
    <string name="nilaimu">Nilaimu :</string>
    <string name="safarun_najib_dwi_atmoko">Safarun Najib Dwi Atmoko</string>
    <string name="mahasiswa_universitas">Mahasiswa Universitas Negeri Yogyakarta, program studi Pendidikan Teknik Mesin-S1 angkatan 2015</string>
    <string name="mobile_basic">Mobile Basic CNC adalah sebuah aplikasi pembelajaran berbasis android untuk materi pembelajaran CNC. Dengan adanya aplikasi ini, pengguna diharapkan bisa belajar materi CNC dengan baik dan efisien. Dimana pengguna dapat belajar dimanapun dan kapanpun.</string>
    <string name="silabus">SILABUS</string>
    <string name="a_kompetensi_dasar">A.\tKOMPETENSI DASAR</string>
    <string name="b_indikator">B.\tINDIKATOR</string>
    <string name="c_tujuan_pembelajaran">C.\tTUJUAN PEMBELAJARAN</string>
    <string name="menerapkan_teknik">Menerapkan teknik pemrograman mesin bubut CNC</string>
    <string name="_1_menjelaskan_dasar">1.\tMenjelaskan dasar bagian-bagian program mesin bubut CNC</string>
    <string name="_2_menulis_dasar_program_mesin_bubut_cnc">2.\tMenulis dasar program mesin bubut CNC</string>
    <string name="setelah_mempelajari_media_ini_diharapkan">Setelah mempelajari media ini diharapkan :</string>
    <string name="_1_siswa_mampu_menjelaskan_dasar_bagian_bagian_program_mesin_bubut_cnc">1.\tSiswa mampu menjelaskan dasar bagian-bagian program mesin bubut CNC</string>
    <string name="_2_siswa_mampu_menulis_dasar_program_mesin_bubut_cnc">2.\tSiswa mampu menulis dasar program mesin bubut CNC</string>

</resources>
