<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp"
        android:background="@color/materialgreen">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/colorPrimary"
            android:text="PROFILE"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/image1"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/photo" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/safarun_najib_dwi_atmoko"
            android:textColor="@color/white"
            android:textSize="@dimen/_21sdp"
            android:textStyle="bold" />
        <LinearLayout
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textColor="@color/white"
                android:id="@+id/textView5"
                android:gravity="start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="Tentang Saya"
                android:textStyle="bold"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:textColor="@color/white"
                android:id="@+id/textView6"
                android:gravity="start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/mahasiswa_universitas"
                android:textSize="@dimen/_15sdp" />
            <TextView
                android:textColor="@color/white"
                android:id="@+id/textView7"
                android:gravity="start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="Tentang Aplikasi"
                android:textStyle="bold"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:textColor="@color/white"
                android:id="@+id/textView8"
                android:gravity="start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_70sdp"
                android:text="@string/mobile_basic"
                android:layout_marginRight="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
